--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -11,22 +11,19 @@ function setLogoBasedOnTheme() {
 
 // Event listener for DOM content loaded to set the logo based on the current theme
 document.addEventListener('DOMContentLoaded', function() {
-    setLogoBasedOnTheme();
+    document.getElementById("theme-toggle").addEventListener("click", () => {
+        var logo = document.getElementById('brandLogo');
+        if (document.body.classList.contains("dark")) {
+            document.body.classList.remove('dark');
+            localStorage.setItem("pref-theme", 'light');
+            logo.src = '/brandlogo-light.png'; // Ensure this path is correct
+        } else {
+            document.body.classList.add('dark');
+            localStorage.setItem("pref-theme", 'dark');
+            logo.src = '/brandlogo-dark.png'; // Ensure this path is correct
+        }
+    });
 });
-
-{{- if (not .Site.Params.theme.disableThemeToggle) }}
-// Event listener for theme toggle button
-document.getElementById("theme-toggle").addEventListener("click", () => {
-    if (document.body.classList.contains("dark")) {
-        document.body.classList.remove('dark');
-        localStorage.setItem("pref-theme", 'light');
-    } else {
-        document.body.classList.add('dark');
-        localStorage.setItem("pref-theme", 'dark');
-    }
-    setLogoBasedOnTheme(); // Update the logo whenever the theme is toggled
-});
-{{- end }}
 
 // Initialize Bootstrap tooltips
 var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
